--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to My Landing Page</h1>
+    <h1>Welcome to My Landing Page2</h1>
     <p>This is a simple landing page built with Webpack, JavaScript, and SCSS.</p>
   </div>
 </body>
