feat:add addition styles

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -86,8 +86,8 @@
             <li class="help__item help__item--shampoos">Shampoos</li>
             <li class="help__item help__item--vitamins">Vitamins</li>
             <li class="help__item help__item--medicines">Medicines</li>
-            <li class="help__item help__item--blankets">Blankets</li>
-            <li class="help__item help__item--money">Money</li>
+            <li class="help__item help__item--collars">Collars / leashes</li>
+            <li class="help__item help__item--sleeping">Sleeping areas</li>
           </ul>
         </div>
       </section>
