--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -14,7 +14,8 @@
           <h1 class="header__title main-title">Cozy House</h1>
           <p class="header__subtitle">Shelter for pets in Boston</p>
         </a>
-        <button class="burger" aria-label="Toggle navigation"></button>
+
+        <div class="header__wrapper"></div>
         <nav class="header__navigation">
           <ul class="menu">
             <li class="menu__item">
@@ -31,6 +32,7 @@
             </li>
           </ul>
         </nav>
+        <button class="burger" aria-label="Toggle navigation"></button>
       </div>
     </header>
 
