feat: add slider

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -10,29 +10,29 @@
   <body class="body">
     <header class="header">
       <div class="container header__container">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="#" aria-label="back to homepage">
           <h1 class="header__title main-title">Cozy House</h1>
           <p class="header__subtitle">Shelter for pets in Boston</p>
         </a>
 
         <div class="header__wrapper"></div>
         <nav class="header__navigation">
-          <ul class="menu">
-            <li class="menu__item">
+          <ul class="menu" role="menu">
+            <li class="menu__item" role="menuitem">
               <a class="menu__link menu__link--active" href="#">About the shelter</a>
             </li>
-            <li class="menu__item">
+            <li class="menu__item" role="menuitem">
               <a class="menu__link" href="../pets/index.html">Our pets</a>
             </li>
-            <li class="menu__item">
+            <li class="menu__item" role="menuitem">
               <a class="menu__link" href="#help">Help the shelter</a>
             </li>
-            <li class="menu__item">
+            <li class="menu__item" role="menuitem">
               <a class="menu__link" href="#contact">Contacts</a>
             </li>
           </ul>
         </nav>
-        <button class="burger" aria-label="Toggle navigation"></button>
+        <button class="burger" aria-label="toggle navigation"></button>
       </div>
     </header>
 
@@ -94,31 +94,32 @@
         </div>
       </section>
 
-      <section class="contacts section" id="contact">
+      <section class="in-addition section">
         <div class="container container--flex">
-          <div class="contacts__inner">
-            <h2 class="contacts__title title">Contacts</h2>
-            <p class="contacts__text">You can find us here:</p>
-            <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" target="_blank" rel="noopener noreferrer" class="footer__location">1 Central Street, Boston (entrance from the store)</a>
-            <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" target="_blank" rel="noopener noreferrer" class="footer__location">18 South Park, London</a>
+          <img src="../images/donation-dog.png" alt="donation dog" class="in-addition__img">
+          <div class="in-addition__inner">
+            <h2 class="in-addition__title title">You can also <br> make a donation</h2>
+            <div class="in-addition__info">Name of the bank / Type of bank account</div>
+            <a href="#" class="in-addition__link button button--long">8380 2880 8028 8791 7435</a>
+            <p class="in-addition__text"> Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
           </div>
-          <form class="contacts__form form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" required></textarea>
-            <button type="submit" class="form__button">Send</button>
-          </form>
         </div>
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="container footer__container">
-        <p class="footer__text">© 2024 Cozy House</p>
-        <p class="footer__text">All rights reserved</p>
+        <div class="footer__contacts footer__col">
+          <h3 class="footer__title title title--white">For questions and suggestions</h3>
+          <a href="mailto:email@shelter.com" class="footer__email">email@shelter.com</a>
+          <a href="tel:+136745677554" class="footer__phone">+13 674 567 75 54</a>
+        </div>
+        <div class="footer__address footer__col">
+          <h3 class="footer__title title title--white">We are waiting for your visit</h3>
+          <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
+          <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
+        </div>
+        <img src="../images/footer-puppy.png" alt="" class="footer__img">
       </div>
     </footer>
 
