--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -1,17 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Landing Page</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Welcome to My Landing Page2</h1>
-    <p>This is a simple landing page built with Webpack, JavaScript, and SCSS.</p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shelter</title>
+  </head>
+  <body class="body">
+    <header class="header header--pets">
+      <div class="container header__container">
+        <a class="header__logo" href="../main/index.html">
+          <h1 class="header__title main-title main-title--pets">Cozy House</h1>
+          <p class="header__subtitle header__subtitle--black">Shelter for pets in Boston</p>
+        </a>
+        <div class="header__wrapper">         </div>
+        <nav class="header__navigation">
+          <ul class="menu">
+            <li class="menu__item">
+              <a class="menu__link menu__link--pets" href="../main/index.html">About the shelter</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link--pets menu__link--active" href="../pets/index.html">Our pets</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link--pets" href="../main/index.html#help">Help the shelter</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link--pets" href="#contact">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="burger burger--pets"></div>
+      </div>
+    </header>
+
+    <main class="main main--pets">
+      <section class="our-friends section" id="our-friends">
+        <div class="container container--center">
+          <h2 class="our-friends__title title our-friends__title--pets">Our friends who <br> are looking for a house</h2>
+          <ul class="our-friends__list our-friends__list--pets">
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/katrine.png" alt="katrine" class="our-friends__img">
+              <p class="our-friends__name">Katrine</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/jennifer.png" alt="jennifer" class="our-friends__img">
+              <p class="our-friends__name">Jennifer</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/woody.png" alt="woody" class="our-friends__img">
+              <p class="our-friends__name">Woody</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/sophia.png" alt="sophia" class="our-friends__img">
+              <p class="our-friends__name">Sophia</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/timmy.png" alt="timmy" class="our-friends__img">
+              <p class="our-friends__name">Timmy</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/charly.png" alt="charly" class="our-friends__img">
+              <p class="our-friends__name">Charly</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/scarlett.png" alt="scarlett" class="our-friends__img">
+              <p class="our-friends__name">Scarlett</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+            <li class="our-friends__item">
+              <img src="../../assets/images/pets/freddie.png" alt="freddie" class="our-friends__img">
+              <p class="our-friends__name">Freddie</p>
+              <button class="our-friends__btn button button--clear">Learn more</button>
+            </li>
+          </ul>
+
+          <div class="pagination">
+            <button class="pagination__btn start" disabled>
+              <svg width="25" height="11" viewBox="0 0 25 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.94687 10.7852L0.913671 6.08789V4.98438L9.94687 0.287109V1.625L2.43711 5.53125L9.94687 9.44727V10.7852ZM24.018 10.7852L14.9848 6.08789V4.98438L24.018 0.287109V1.625L16.5082 5.53125L24.018 9.44727V10.7852Z" fill="#292929"/>
+              </svg>
+            </button>
+            <button class="pagination__btn prev" disabled>
+              <svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.98242 10.7852L0.949219 6.08789V4.98438L9.98242 0.287109V1.625L2.47266 5.53125L9.98242 9.44727V10.7852Z" fill="#292929"/>
+              </svg>
+            </button>
+            <button class="pagination__btn pagination__btn--active current">1</button>
+            <button class="pagination__btn next">
+              <svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.04102 6.08789L0.0078125 10.7852V9.44727L7.51758 5.53125L0.0078125 1.625V0.287109L9.04102 4.98438V6.08789Z" fill="#292929"/>
+              </svg>
+            </button>
+            <button class="pagination__btn end">
+              <svg width="25" height="11" viewBox="0 0 25 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.0055 6.08789L0.972265 10.7852V9.44727L8.48203 5.53125L0.972265 1.625V0.287109L10.0055 4.98438V6.08789ZM24.0766 6.08789L15.0434 10.7852V9.44727L22.5531 5.53125L15.0434 1.625V0.287109L24.0766 4.98438V6.08789Z" fill="#292929"/>
+              </svg>
+            </button>
+          </div>
+
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="footer" id="contact">
+      <div class="container footer__container">
+        <div class="footer__contacts footer__col">
+          <h3 class="footer__title title title--white">For questions and suggestions</h3>
+          <a href="mailto:email@shelter.com" class="footer__email">email@shelter.com</a>
+          <a href="tel:+136745677554" class="footer__phone">+13 674 567 75 54</a>
+        </div>
+        <div class="footer__address footer__col">
+          <h3 class="footer__title title title--white">We are waiting for your visit</h3>
+          <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
+          <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
+        </div>
+        <img src="../images/footer-puppy.png" alt="" class="footer__img">
+      </div>
+    </footer>
+
+        <div class="modal">
+      <div class="modal__wrapper">
+        <div class="modal__box">
+          <img src="../images/modal/Jennifer.png" alt="" class="modal__image">
+        </div>
+        <div class="modal__inner">
+          <h3 class="modal__name">Jennifer</h3>
+          <span class="modal__type">Dog</span>
+          <span class="modal__breed">Labrador</span>
+          <p class="modal__description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</p>
+          <ul class="modal__list">
+            <li class="modal__item">
+              <span class="modal__info-title">Age:</span>
+              <span class="modal__info">2 months</span>
+            </li>
+          </ul>
+
+        </div>
+        <button class="modal__btn"></button>
+      </div>
+
+    </div>
+
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
-
-
