feat: add pets style

--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -65,17 +65,17 @@
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/charly.png" alt="charly" class="our-friends__img">
+              <img src="../images/pets/charly.png" alt="charly" class="our-friends__img">
               <p class="our-friends__name">Charly</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/scarlett.png" alt="scarlett" class="our-friends__img">
+              <img src="../images/pets/scarlett.png" alt="scarlett" class="our-friends__img">
               <p class="our-friends__name">Scarlett</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/freddie.png" alt="freddie" class="our-friends__img">
+              <img src="../images/pets/freddie.png" alt="freddie" class="our-friends__img">
               <p class="our-friends__name">Freddie</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
