feat: add pagination

--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -40,42 +40,42 @@
           <h2 class="our-friends__title title our-friends__title--pets">Our friends who <br> are looking for a house</h2>
           <ul class="our-friends__list our-friends__list--pets">
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/katrine.png" alt="katrine" class="our-friends__img">
+              <img src="../images/pets/Katrine.png" alt="katrine" class="our-friends__img">
               <p class="our-friends__name">Katrine</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/jennifer.png" alt="jennifer" class="our-friends__img">
+              <img src="../images/pets/Jennifer.png" alt="jennifer" class="our-friends__img">
               <p class="our-friends__name">Jennifer</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/woody.png" alt="woody" class="our-friends__img">
+              <img src="../images/pets/Woody.png" alt="woody" class="our-friends__img">
               <p class="our-friends__name">Woody</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/sophia.png" alt="sophia" class="our-friends__img">
+              <img src="../images/pets/Sophia.png" alt="sophia" class="our-friends__img">
               <p class="our-friends__name">Sophia</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../../assets/images/pets/timmy.png" alt="timmy" class="our-friends__img">
+              <img src="../images/pets/Timmy.png" alt="timmy" class="our-friends__img">
               <p class="our-friends__name">Timmy</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/charly.png" alt="charly" class="our-friends__img">
+              <img src="../images/pets/Charly.png" alt="charly" class="our-friends__img">
               <p class="our-friends__name">Charly</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/scarlett.png" alt="scarlett" class="our-friends__img">
+              <img src="../images/pets/Scarlett.png" alt="scarlett" class="our-friends__img">
               <p class="our-friends__name">Scarlett</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/freddie.png" alt="freddie" class="our-friends__img">
+              <img src="../images/pets/Freddie.png" alt="freddie" class="our-friends__img">
               <p class="our-friends__name">Freddie</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
@@ -149,6 +149,5 @@
 
     </div>
 
-    <script type="module" src="index.js"></script>
   </body>
 </html>
