refactor: update modal structure

--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -17,13 +17,13 @@
         <nav class="header__navigation">
           <ul class="menu">
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../main/index.html">About the shelter</a>
+              <a class="menu__link menu__link--pets" href="../index.html">About the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets menu__link--active" href="../pets/index.html">Our pets</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../main/index.html#help">Help the shelter</a>
+              <a class="menu__link menu__link--pets" href="../index.html#help">Help the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets" href="#contact">Contacts</a>
@@ -125,29 +125,6 @@
         <img src="../images/footer-puppy.png" alt="" class="footer__img">
       </div>
     </footer>
-
-        <div class="modal">
-      <div class="modal__wrapper">
-        <div class="modal__box">
-          <img src="../images/modal/Jennifer.png" alt="" class="modal__image">
-        </div>
-        <div class="modal__inner">
-          <h3 class="modal__name">Jennifer</h3>
-          <span class="modal__type">Dog</span>
-          <span class="modal__breed">Labrador</span>
-          <p class="modal__description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</p>
-          <ul class="modal__list">
-            <li class="modal__item">
-              <span class="modal__info-title">Age:</span>
-              <span class="modal__info">2 months</span>
-            </li>
-          </ul>
-
-        </div>
-        <button class="modal__btn"></button>
-      </div>
-
-    </div>
 
   </body>
 </html>
