--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -17,13 +17,13 @@
         <nav class="header__navigation">
           <ul class="menu">
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../index.html">About the shelter</a>
+              <a class="menu__link menu__link--pets" href="../main/index.html">About the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets menu__link--active" href="../pets/index.html">Our pets</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../index.html#help">Help the shelter</a>
+              <a class="menu__link menu__link--pets" href="../main/index.html#help">Help the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets" href="#contact">Contacts</a>
