--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a class="menu__link menu__link--active" href="#">About the shelter</a>
             </li>
             <li class="menu__item" role="menuitem">
-              <a class="menu__link" href="../pets/index.html">Our pets</a>
+              <a class="menu__link" href="./pets/index.html">Our pets</a>
             </li>
             <li class="menu__item" role="menuitem">
               <a class="menu__link" href="#help">Help the shelter</a>
@@ -73,7 +73,7 @@
             </div>
             <button class="slider__btn slider__btn--right" aria-label="Scroll right"></button>
           </div>
-          <a href="../pets/index.html" class="our-friends__link button">Get to know the rest</a>
+          <a href="./pets/index.html" class="our-friends__link button">Get to know the rest</a>
         </div>
       </section>
 
