--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cozy House is a shelter for pets in Boston, offering a new home for dogs and cats in need. Learn more about our work and how you can help.">
     <title>Shelter</title>
-  <script defer src="main.5f944c6a590ca8001f32.js"></script></head>
+    <base href="/shelter/">
+  <script defer src="/shelter/main.d19538101639f41fec28.js"></script></head>
   <body class="body">
     <header class="header">
       <div class="container header__container">
@@ -22,7 +23,7 @@
               <a class="menu__link menu__link--active" href="#">About the shelter</a>
             </li>
             <li class="menu__item" role="menuitem">
-              <a class="menu__link" href="./pets/index.html">Our pets</a>
+              <a class="menu__link" href="../pets/index.html">Our pets</a>
             </li>
             <li class="menu__item" role="menuitem">
               <a class="menu__link" href="#help">Help the shelter</a>
@@ -44,13 +45,13 @@
             <p class="not-only__text">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
             <a href="#our-friends" class="not-only__link button">Make a friend</a>
           </div>
-          <img class="not-only__img" src="cc6f2c9b48ef30e6c886.png" alt="A cute puppy">
+          <img class="not-only__img" src="/shelter/cc6f2c9b48ef30e6c886.png" alt="A cute puppy">
         </div>
       </section>
 
       <section class="about section">
         <div class="container container--flex">
-          <img class="about__img" src="bf6a2a5ed9fcbb6338ec.png" alt="Happy pets at the shelter">
+          <img class="about__img" src="/shelter/bf6a2a5ed9fcbb6338ec.png" alt="Happy pets at the shelter">
           <div class="about__inner">
             <h2 class="about__title title">About the shelter “Cozy House”</h2>
             <p class="about__text">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
@@ -73,7 +74,7 @@
             </div>
             <button class="slider__btn slider__btn--right" aria-label="Scroll right"></button>
           </div>
-          <a href="./pets/index.html" class="our-friends__link button">Get to know the rest</a>
+          <a href="../pets/index.html" class="our-friends__link button">Get to know the rest</a>
         </div>
       </section>
 
@@ -96,7 +97,7 @@
 
       <section class="in-addition section">
         <div class="container container--flex">
-          <img src="c3fc4b1913a87796d129.png" alt="donation dog" class="in-addition__img">
+          <img src="/shelter/c3fc4b1913a87796d129.png" alt="donation dog" class="in-addition__img">
           <div class="in-addition__inner">
             <h2 class="in-addition__title title">You can also <br> make a donation</h2>
             <div class="in-addition__info">Name of the bank / Type of bank account</div>
@@ -119,7 +120,7 @@
           <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
           <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
         </div>
-        <img src="475eec3d51a31d55ef82.png" alt="" class="footer__img">
+        <img src="/shelter/475eec3d51a31d55ef82.png" alt="" class="footer__img">
       </div>
     </footer>
 
