--- a/pets/index.html
+++ b/pets/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
-  <script defer src="../pets.246da5dd8193ce1ffaf4.js"></script></head>
+    <base href="/shelter/">
+  <script defer src="/shelter/pets.a618decbd22c4efecb36.js"></script></head>
   <body class="body">
     <header class="header header--pets">
       <div class="container header__container">
@@ -40,42 +41,42 @@
           <h2 class="our-friends__title title our-friends__title--pets">Our friends who <br> are looking for a house</h2>
           <ul class="our-friends__list our-friends__list--pets">
             <li class="our-friends__item">
-              <img src="../8c5b354b76ee36ef6b83.png" alt="katrine" class="our-friends__img">
+              <img src="/shelter/8c5b354b76ee36ef6b83.png" alt="katrine" class="our-friends__img">
               <p class="our-friends__name">Katrine</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../a799a86e0b8f90e583cb.png" alt="jennifer" class="our-friends__img">
+              <img src="/shelter/a799a86e0b8f90e583cb.png" alt="jennifer" class="our-friends__img">
               <p class="our-friends__name">Jennifer</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../e89e5d5f808e890ddba1.png" alt="woody" class="our-friends__img">
+              <img src="/shelter/e89e5d5f808e890ddba1.png" alt="woody" class="our-friends__img">
               <p class="our-friends__name">Woody</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../f59aa343932a79c79a1d.png" alt="sophia" class="our-friends__img">
+              <img src="/shelter/f59aa343932a79c79a1d.png" alt="sophia" class="our-friends__img">
               <p class="our-friends__name">Sophia</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../c99f061294515f8e945a.png" alt="timmy" class="our-friends__img">
+              <img src="/shelter/c99f061294515f8e945a.png" alt="timmy" class="our-friends__img">
               <p class="our-friends__name">Timmy</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../0ba78c5892477a4190fc.png" alt="charly" class="our-friends__img">
+              <img src="/shelter/0ba78c5892477a4190fc.png" alt="charly" class="our-friends__img">
               <p class="our-friends__name">Charly</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../9cc8c31c8cb643642dad.png" alt="scarlett" class="our-friends__img">
+              <img src="/shelter/9cc8c31c8cb643642dad.png" alt="scarlett" class="our-friends__img">
               <p class="our-friends__name">Scarlett</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../383e66f85fa3b983be19.png" alt="freddie" class="our-friends__img">
+              <img src="/shelter/383e66f85fa3b983be19.png" alt="freddie" class="our-friends__img">
               <p class="our-friends__name">Freddie</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
@@ -122,7 +123,7 @@
           <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
           <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
         </div>
-        <img src="../475eec3d51a31d55ef82.png" alt="" class="footer__img">
+        <img src="/shelter/475eec3d51a31d55ef82.png" alt="" class="footer__img">
       </div>
     </footer>
 
