refactor: update webpack

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -44,13 +44,13 @@
             <p class="not-only__text">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
             <a href="#our-friends" class="not-only__link button">Make a friend</a>
           </div>
-          <img class="not-only__img" src="../images/start-screen-puppy.png" alt="A cute puppy">
+          <img class="not-only__img" src="../../assets/images/start-screen-puppy.png" alt="A cute puppy">
         </div>
       </section>
 
       <section class="about section">
         <div class="container container--flex">
-          <img class="about__img" src="../images/about-pets.png" alt="Happy pets at the shelter">
+          <img class="about__img" src="../../assets/images/about-pets.png" alt="Happy pets at the shelter">
           <div class="about__inner">
             <h2 class="about__title title">About the shelter “Cozy House”</h2>
             <p class="about__text">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
@@ -96,7 +96,7 @@
 
       <section class="in-addition section">
         <div class="container container--flex">
-          <img src="../images/donation-dog.png" alt="donation dog" class="in-addition__img">
+          <img src="../../assets/images/donation-dog.png" alt="donation dog" class="in-addition__img">
           <div class="in-addition__inner">
             <h2 class="in-addition__title title">You can also <br> make a donation</h2>
             <div class="in-addition__info">Name of the bank / Type of bank account</div>
@@ -119,7 +119,7 @@
           <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
           <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
         </div>
-        <img src="../images/footer-puppy.png" alt="" class="footer__img">
+        <img src="../../assets/images/footer-puppy.png" alt="" class="footer__img">
       </div>
     </footer>
 
