--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
-  </head>
+    </head>
   <body class="body">
     <header class="header header--pets">
       <div class="container header__container">
-        <a class="header__logo" href="../main/index.html">
+        <a class="header__logo" href="../index.html">
           <h1 class="header__title main-title main-title--pets">Cozy House</h1>
           <p class="header__subtitle header__subtitle--black">Shelter for pets in Boston</p>
         </a>
@@ -17,13 +17,13 @@
         <nav class="header__navigation">
           <ul class="menu">
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../main/index.html">About the shelter</a>
+              <a class="menu__link menu__link--pets" href="../index.html">About the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets menu__link--active" href="../pets/index.html">Our pets</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link menu__link--pets" href="../main/index.html#help">Help the shelter</a>
+              <a class="menu__link menu__link--pets" href="../index.html#help">Help the shelter</a>
             </li>
             <li class="menu__item">
               <a class="menu__link menu__link--pets" href="#contact">Contacts</a>
@@ -40,42 +40,42 @@
           <h2 class="our-friends__title title our-friends__title--pets">Our friends who <br> are looking for a house</h2>
           <ul class="our-friends__list our-friends__list--pets">
             <li class="our-friends__item">
-              <img src="../images/pets/Katrine.png" alt="katrine" class="our-friends__img">
+              <img src="../../assets/images/pets/Katrine.png" alt="katrine" class="our-friends__img">
               <p class="our-friends__name">Katrine</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Jennifer.png" alt="jennifer" class="our-friends__img">
+              <img src="../../assets/images/pets/Jennifer.png" alt="jennifer" class="our-friends__img">
               <p class="our-friends__name">Jennifer</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Woody.png" alt="woody" class="our-friends__img">
+              <img src="../../assets/images/pets/Woody.png" alt="woody" class="our-friends__img">
               <p class="our-friends__name">Woody</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Sophia.png" alt="sophia" class="our-friends__img">
+              <img src="../../assets/images/pets/Sophia.png" alt="sophia" class="our-friends__img">
               <p class="our-friends__name">Sophia</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Timmy.png" alt="timmy" class="our-friends__img">
+              <img src="../../assets/images/pets/Timmy.png" alt="timmy" class="our-friends__img">
               <p class="our-friends__name">Timmy</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Charly.png" alt="charly" class="our-friends__img">
+              <img src="../../assets/images/pets/Charly.png" alt="charly" class="our-friends__img">
               <p class="our-friends__name">Charly</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Scarlett.png" alt="scarlett" class="our-friends__img">
+              <img src="../../assets/images/pets/Scarlett.png" alt="scarlett" class="our-friends__img">
               <p class="our-friends__name">Scarlett</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
             <li class="our-friends__item">
-              <img src="../images/pets/Freddie.png" alt="freddie" class="our-friends__img">
+              <img src="../../assets/images/pets/Freddie.png" alt="freddie" class="our-friends__img">
               <p class="our-friends__name">Freddie</p>
               <button class="our-friends__btn button button--clear">Learn more</button>
             </li>
@@ -122,7 +122,7 @@
           <a href="https://goo.gl/maps/3AtSfbv4jYAcD6tw9" class="footer__location" target="_blank">1 Central Street, Boston (entrance from the store)</a>
           <a href="https://goo.gl/maps/5a8URXfVRsSDLetSA" class="footer__location" target="_blank">18 South Park, London</a>
         </div>
-        <img src="../images/footer-puppy.png" alt="" class="footer__img">
+        <img src="../../assets/images/footer-puppy.png" alt="" class="footer__img">
       </div>
     </footer>
 
