--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cozy House is a shelter for pets in Boston, offering a new home for dogs and cats in need. Learn more about our work and how you can help.">
     <title>Shelter</title>
+        <link rel="icon" href="/shelter/assets/favicon/favicon.ico" type="image/x-icon">
+
     <base href="/shelter/">
   <script defer src="/shelter/main.8db548573dbee0cdc37f.js"></script></head>
   <body class="body">
