--- a/pets/index.html
+++ b/pets/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
+            <link rel="icon" href="/shelter/assets/favicon/favicon.ico" type="image/x-icon">
+
     <base href="/shelter/">
   <script defer src="/shelter/pets.0f0ae164381b60f44116.js"></script></head>
   <body class="body">
