--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cozy House is a shelter for pets in Boston, offering a new home for dogs and cats in need. Learn more about our work and how you can help.">
     <title>Shelter</title>
+    <link rel="icon" href="../../assets/favicon/favicon.ico" type="image/x-icon">
   </head>
   <body class="body">
     <header class="header">
