--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
+        <link rel="icon" href="../../assets/favicon/favicon.ico" type="image/x-icon">
+
     </head>
   <body class="body">
     <header class="header header--pets">
